# Mosukas-Google-Drive-Autosave

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
mosukas_google_drive_autosave/: main.py
src/mosukas_google_drive_autosave/: google_drive_service.py  main.py
